# benday

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/benday-cli/: Cargo.toml
crates/benday-cli/src/: main.rs
crates/benday-cli/tests/: cli.rs
crates/benday-core/: Cargo.toml
crates/benday-core/src/: ansi.rs  compile.rs  data.rs  error.rs  ingest.rs  lib.rs  raster.rs  render.rs  scale.rs  scene.rs  spec.rs  theme.rs  time.rs
crates/benday-core/src/compile/: bars.rs  mod.rs  xy.rs
crates/benday-core/src/raster/: mod.rs
crates/benday-core/tests/: corpus.rs  gallery.rs
crates/benday-core/tests/cases/: area_basic.json  bar_color_by_x.json  bar_count.json  bar_declared_date_category_sorted.json  bar_median.json  bar_numeric_strings.json  bar_promoted_string_nominal.json  bar_simple.json  bar_temporal_xcount_horizontal.json  bin_not_yet_routed.json  columnar_inline.json  declared_beats_inference.json  declared_date_ordinal.json  declared_string_y_still_vertical.json  err_agg_on_category.json  err_bar_color_group.json  err_bar_negative.json  err_bar_quant_x.json  err_bar_temporal_no_timeunit.json  err_bin_and_timeunit.json  err_bin_color_series.json  err_bin_maxbins_and_step.json  err_bin_maxbins_fractional.json  err_bin_maxbins_zero.json  err_bin_nominal.json  err_bin_on_color.json  err_bin_on_y.json  err_bin_step_negative.json  err_bin_step_zero.json  err_bin_temporal.json  err_bin_too_many.json  err_bin_with_line.json  err_bin_y_no_aggregate.json  err_both_categorical.json  err_both_quant.json  err_categorical_y.json  err_data_both_forms.json  err_empty_data.json  err_group_width.json  err_grouped_palette.json  (+55 more)
crates/benday-core/tests/snapshots/: corpus__case__area_basic.snap  corpus__case__bar_color_by_x.snap  corpus__case__bar_count.snap  corpus__case__bar_declared_date_category_sorted.snap  corpus__case__bar_median.snap  corpus__case__bar_numeric_strings.snap  corpus__case__bar_promoted_string_nominal.snap  corpus__case__bar_simple.snap  corpus__case__bar_temporal_xcount_horizontal.snap  corpus__case__bin_not_yet_routed.snap  corpus__case__columnar_inline.snap  corpus__case__declared_beats_inference.snap  corpus__case__declared_date_ordinal.snap  corpus__case__declared_date_temporal.snap  corpus__case__declared_string_y_still_vertical.snap  corpus__case__err_agg_on_category.snap  corpus__case__err_aggregate_on_x.snap  corpus__case__err_bar_color_group.snap  corpus__case__err_bar_negative.snap  corpus__case__err_bar_quant_x.snap  (+112 more)
(+19 files in other folders)
