[workspace]
members = ["crates/benday-core", "crates/benday-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fwojciec/benday"
readme = "README.md"
keywords = ["charts", "terminal", "cli", "vega-lite", "visualization"]

[profile.release]
lto = true
strip = true
