[package]
name = "benday"
description = "Crisp terminal charts from a Vega-Lite-style JSON spec, built for agents to call"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "benday"
path = "src/main.rs"

[dependencies]
benday-core = { version = "0.1.0", path = "../benday-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
