[package]
name = "benday-core"
description = "Spec-to-chart rendering core for benday: terminal charts from a Vega-Lite-style JSON spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["visualization"]
# Snapshot corpora are dev-only surface; keep the published crate slim.
exclude = ["tests/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
